--- a/index.html
+++ b/index.html
@@ -3,183 +3,186 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>12 Bubbles Ultimate</title>
+<title>Bubble Pop - Verze 12</title>
 <style>
-/* ================== Reset & Basic ================== */
-html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: monospace; background-color:#0a0a0a; color:#fff; }
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Segoe UI",sans-serif;}
+body{
+  background:radial-gradient(circle at top,#001,#004);
+  overflow:hidden;
+  height:100vh;
+  color:white;
+  user-select:none;
+}
+#scoreContainer{
+  position:fixed;top:10px;left:10px;display:flex;flex-direction:column;gap:5px;font-size:20px;z-index:10;
+}
+#pauseBtn{
+  position:fixed;top:15px;right:20px;width:40px;height:40px;
+  background:rgba(255,255,255,0.1);
+  border:2px solid rgba(255,255,255,0.4);
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+  transition:0.2s;
+  z-index:10;
+}
+#pauseBtn:hover{background:rgba(255,255,255,0.25);transform:scale(1.05);}
+.pause-icon{
+  display:flex;
+  justify-content:space-between;
+  width:14px;
+  height:18px;
+}
+.pause-icon div{
+  width:4px;
+  height:100%;
+  background:white;
+  border-radius:1px;
+}
 
-/* ================== LOADING SCREEN ================== */
-#loadingScreen { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; display:flex; justify-content:center; align-items:center; color:#fff; font-size:50px; font-weight:bold; z-index:3000; text-align:center; animation:eyeGlow 2s ease-in-out forwards;}
-@keyframes eyeGlow { 0% { opacity:0.2; text-shadow:none; } 50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; } 100% { opacity:0.2; text-shadow:none; } }
+/* Pause Screen */
+#pauseScreen{
+  position:fixed;inset:0;
+  display:none;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  backdrop-filter:blur(8px);
+  background:rgba(0,0,0,0.4);
+  z-index:20;
+  animation-duration:0.3s;
+}
+.fadeIn{animation:fadeIn 0.3s forwards;}
+.fadeOut{animation:fadeOut 0.3s forwards;}
+@keyframes fadeIn{from{opacity:0;}to{opacity:1;}}
+@keyframes fadeOut{from{opacity:1;}to{opacity:0;}}
+.pause-btn{
+  background:#08f;
+  color:white;
+  border:none;
+  padding:12px 24px;
+  font-size:20px;
+  border-radius:12px;
+  cursor:pointer;
+  margin-top:20px;
+  transition:0.3s;
+}
+.pause-btn:hover{background:#0af;transform:scale(1.05);}
 
-/* ================== BUTTONS ================== */
-#startBtn, #indexBtn { display:none; margin:0 auto; font-size:28px; padding:15px 35px; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); border:none; border-radius:12px; color:#fff; font-weight:bold; text-transform:uppercase; cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; z-index:1000; transition: transform 0.2s; }
-#startBtn:hover, #indexBtn:hover { transform: scale(1.05); }
-#startBtn { margin-top:30vh; }
-#indexBtn { margin-top:20px; }
+/* Bubbles */
+.bubble{
+  position:absolute;
+  background:radial-gradient(circle at 30% 30%,#fff,rgba(255,255,255,0.2));
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:#fff;
+  font-weight:bold;
+  cursor:pointer;
+  transition:transform 0.2s;
+  box-shadow:0 0 10px rgba(255,255,255,0.4);
+}
+.bubble:hover{transform:scale(1.15);}
+.bubble:active{transform:scale(0.9);}
+.bubble.instawin{background:radial-gradient(circle at 30% 30%,#0f0,#040);}
+.bubble.invert{background:radial-gradient(circle at 30% 30%,#ff0,#660);}
+.bubble.rare2x{background:radial-gradient(circle at 30% 30%,#0af,#004);}
+.bubble.rare144{background:radial-gradient(circle at 30% 30%,#f0f,#404);}
+.bubble.triple{background:radial-gradient(circle at 30% 30%,#fa0,#520);}
+.bubble.gravity{background:radial-gradient(circle at 30% 30%,#0ff,#044);}
 
-/* ================== COUNTDOWN & SCORE ================== */
-#countdown { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); font-size:80px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff; z-index:1001; display:none; }
-#scoreContainer { position:fixed; top:20px; left:50%; transform:translateX(-50%); z-index:1001; text-align:center; display:none; }
-#highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
-#score { font-size:28px; color:#d166ff; }
-#lives { font-size:20px; color:#f00; margin-top:5px; }
+/* End screen */
+#endScreen{
+  position:fixed;inset:0;
+  display:none;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  backdrop-filter:blur(5px);
+  background:rgba(0,0,0,0.6);
+  z-index:30;
+}
+#endScreen button{
+  background:#08f;color:white;
+  border:none;border-radius:10px;
+  padding:12px 24px;
+  font-size:18px;
+  margin-top:20px;
+  cursor:pointer;
+  transition:0.3s;
+}
+#endScreen button:hover{background:#0af;transform:scale(1.05);}
 
-/* ================== BUBBLES ================== */
-.bubble { width:80px; height:80px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-size:24px; font-weight:bold; color:#fff; background:linear-gradient(135deg,#a044ff,#6a00f4); border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset; position:absolute; cursor:pointer; animation:floatY 3s infinite alternate ease-in-out; transition: transform 0.2s; }
-.bubble:hover { transform: scale(1.1); }
-.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; animation:floatY 2.5s infinite alternate ease-in-out; }
-.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:28px; animation:floatY 2s infinite alternate ease-in-out; }
-.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:24px; animation:floatY 3s infinite alternate ease-in-out; }
-.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; animation:floatY 3s infinite alternate ease-in-out; }
-.bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:26px; animation:floatY 2.8s infinite alternate ease-in-out; }
-.bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; animation:floatY 1.8s infinite alternate ease-in-out; }
-@keyframes floatY { 0% { transform: translateY(0);} 100% { transform: translateY(-15px);} }
-
-/* ================== INDEX PANEL ================== */
-#indexPanel { position:fixed; top:100%; left:0; width:100%; max-height:70%; background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease; padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff; }
-#indexPanel h2 { text-transform:uppercase; }
-#indexPanel .closeBtn { position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer; color:#fff; font-weight:bold; z-index:1001; }
-.indexItem { display:flex; align-items:center; margin:10px 0; }
-.indexItem .bubbleImg { width:60px; height:60px; margin-right:15px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-weight:bold; color:#fff; border:2px solid #d166ff; box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate; }
-.indexItem .desc { flex:1; }
-.indexItem .rarity { font-weight:bold; }
-@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
-
-/* ================== END SCREEN ================== */
-#endScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.95); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:1500; text-align:center; }
-#continueBtn { margin-top:30px; font-size:26px; padding:15px 40px; border:none; border-radius:10px; cursor:pointer; color:#fff; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-
-/* ================== VERSION LABEL ================== */
-#versionLabel { position:fixed; top:10px; right:10px; font-size:16px; color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none; }
-
-/* ================== EASTER EGG ================== */
-#easterEgg { position: fixed; top: 0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); color:red; font-size:150px; font-weight:bold; display:flex; justify-content:center; align-items:center; z-index:2000; display:none; text-transform:uppercase; opacity:0; animation:fadeShake 5s forwards; }
-@keyframes fadeShake { 0%{opacity:0; transform:translateX(0);} 10%{opacity:1; transform:translateX(-5px);} 20%{transform:translateX(5px);} 30%{transform:translateX(-5px);} 40%{transform:translateX(5px);} 50%{transform:translateX(-5px);} 60%{transform:translateX(5px);} 70%{transform:translateX(-5px);} 80%{transform:translateX(5px);} 90%{transform:translateX(-5px);} 100%{opacity:0; transform:translateX(0);} }
-
-/* ================== PAUSE SCREEN ================== */
-#pauseScreen { position: fixed; top: 0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.85); color:#fff; display: none; flex-direction: column; justify-content: center; align-items: center; z-index:2000; text-align:center; opacity:0; backdrop-filter: blur(5px); animation-fill-mode: forwards; }
-#pauseScreen.fadeIn { animation: fadeIn 0.5s forwards; }
-#pauseScreen.fadeOut { animation: fadeOut 0.5s forwards; }
-@keyframes fadeIn { 0% { opacity:0; transform:scale(0.9);} 100%{ opacity:1; transform:scale(1);} }
-@keyframes fadeOut { 0% { opacity:1; transform:scale(1);} 100%{ opacity:0; transform:scale(0.9);} }
-#pauseText { font-size:60px; font-weight:bold; margin-bottom:30px; text-shadow:0 0 20px #fff; }
-#continueGameBtn, #endGameBtn { font-size:28px; padding:15px 40px; margin:10px; border:none; border-radius:10px; cursor:pointer; color:#fff; background:linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-
-/* ================== PAUSE BUTTON ================== */
-#pauseBtn { position: fixed; top:10px; left:10px; font-size:28px; padding:10px 18px; border:none; border-radius:8px; background: linear-gradient(45deg,#a044ff,#6a00f4); color:#fff; cursor:pointer; z-index:1001; display:none; text-shadow:0 0 10px #fff; }
-
+/* Easter screen */
+#easterEl{
+  display:none;
+  position:fixed;
+  inset:0;
+  justify-content:center;
+  align-items:center;
+  font-size:100px;
+  color:white;
+  z-index:40;
+  animation:fadeShake 3s forwards;
+}
+@keyframes fadeShake{
+  0%{opacity:0;transform:scale(0.5);}
+  50%{opacity:1;transform:scale(1.2);}
+  100%{opacity:0;transform:scale(0);}
+}
 </style>
 </head>
 <body>
-
-<div id="loadingScreen">Level 12 studio</div>
-<div id="versionLabel">Released 1.2.3</div>
-<button id="startBtn">START</button>
-<button id="indexBtn">INDEX</button>
-
-<div id="indexPanel">
-  <div class="closeBtn">✖</div>
-  <h2>BUBBLES INDEX</h2>
-  <!-- index items omitted for brevity (stejné jako originál) -->
-</div>
-
-<div id="countdown"></div>
 <div id="scoreContainer">
-  <div id="highscore">Nejvyšší skóre: 0</div>
   <div id="score">Skóre: 0</div>
   <div id="lives">Životy: 3</div>
+  <div id="highscore">Nejvyšší skóre: 0</div>
 </div>
 
-<div id="pauseBtn">|  |</div>
+<div id="pauseBtn" title="Pauza">
+  <div class="pause-icon">
+    <div></div><div></div>
+  </div>
+</div>
+
 <div id="pauseScreen">
-  <div id="pauseText">PAUZA</div>
-  <button id="continueGameBtn">Pokračovat</button>
-  <button id="endGameBtn">Konec</button>
+  <h1>Pauza</h1>
+  <button class="pause-btn" id="continueGameBtn">Pokračovat</button>
+  <button class="pause-btn" id="endGameBtn">Ukončit hru</button>
 </div>
 
 <div id="endScreen">
-  <div id="finalScoreText"></div>
-  <button id="continueBtn">POKRAČOVAT</button>
+  <h1 id="finalScoreText"></h1>
+  <button id="continueBtn">Zpět do menu</button>
 </div>
 
-<div id="easterEgg"></div>
-<audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
+<div id="easterEl"></div>
 
 <script>
-const startBtn=document.getElementById('startBtn');
-const indexBtn=document.getElementById('indexBtn');
-const indexPanel=document.getElementById('indexPanel');
-const countdownEl=document.getElementById('countdown');
-const scoreContainer=document.getElementById('scoreContainer');
-const scoreEl=document.getElementById('score');
-const highscoreEl=document.getElementById('highscore');
-const livesEl=document.getElementById('lives');
-const popSound=document.getElementById('popSound');
-const endScreen=document.getElementById('endScreen');
-const finalScoreText=document.getElementById('finalScoreText');
-const versionLabel=document.getElementById('versionLabel');
-const easterEl=document.getElementById('easterEgg');
-const closeBtn=document.querySelector('#indexPanel .closeBtn');
+let score=0, lives=3, highscore=0;
+let bubbles=[], gameRunning=false, gamePaused=false, startTime=0;
 
+const scoreEl=document.getElementById('score');
+const livesEl=document.getElementById('lives');
+const highscoreEl=document.getElementById('highscore');
 const pauseBtn=document.getElementById('pauseBtn');
 const pauseScreen=document.getElementById('pauseScreen');
 const continueGameBtn=document.getElementById('continueGameBtn');
 const endGameBtn=document.getElementById('endGameBtn');
+const endScreen=document.getElementById('endScreen');
 const continueBtn=document.getElementById('continueBtn');
+const easterEl=document.getElementById('easterEl');
 
-let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, startTime;
+pauseBtn.addEventListener('click',togglePause);
+continueGameBtn.addEventListener('click',togglePause);
+endGameBtn.addEventListener('click',endGame);
+continueBtn.addEventListener('click',()=>location.reload());
 
-// ---------------------- LOAD ----------------------
-window.addEventListener('load',()=>{
-  setTimeout(()=>{
-    document.getElementById('loadingScreen').style.display='none';
-    startBtn.style.display='block';
-    indexBtn.style.display='block';
-    attachButtonEvents();
-  },2000);
-});
+startGame();
 
-// ---------------------- BUTTONS ----------------------
-function attachButtonEvents(){
-  startBtn.addEventListener('click',startCountdown);
-  indexBtn.addEventListener('click',(e)=>{
-    e.stopPropagation();
-    if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
-    else { indexPanel.style.top='30%'; startBtn.style.display='none'; indexBtn.style.display='none'; }
-  });
-  closeBtn.addEventListener('click',(e)=>{ e.stopPropagation(); indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; });
-  document.body.addEventListener('click',()=>{
-    if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
-  });
-  continueBtn.addEventListener('click',()=>{ endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block'; versionLabel.style.display='block'; });
-  pauseBtn.addEventListener('click',togglePause);
-  continueGameBtn.addEventListener('click',togglePause);
-  endGameBtn.addEventListener('click',endGame);
-}
-
-// ---------------------- COUNTDOWN ----------------------
-function startCountdown(){
-  versionLabel.style.display='none';
-  startBtn.style.display='none';
-  indexBtn.style.display='none';
-  countdownEl.style.display='block';
-  let count=3;
-  countdownEl.textContent=count;
-  const interval=setInterval(()=>{
-    count--;
-    if(count>0) countdownEl.textContent=count;
-    else{
-      clearInterval(interval);
-      countdownEl.style.display='none';
-      scoreContainer.style.display='block';
-      pauseBtn.style.display='block';
-      startGame();
-    }
-  },1000);
-}
-
-// ---------------------- GAME ----------------------
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; gamePaused=false; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
@@ -197,7 +200,6 @@ function togglePause(){
   }
 }
 
-// ---------------------- UPDATE ----------------------
 function updateBubbles(){
   if(!gameRunning) return;
   if(!gamePaused){
@@ -214,15 +216,15 @@ function updateBubbles(){
   requestAnimationFrame(updateBubbles);
 }
 
-// ---------------------- SPAWN ----------------------
 function spawnBubble(){
-  if(!gameRunning){ return; }
+  if(!gameRunning) return;
   if(gamePaused){ setTimeout(spawnBubble,500); return; }
 
   const elapsed=(Date.now()-startTime)/1000;
   const speedMultiplier=1+elapsed/120;
   const chance=Math.random();
-  const bubble=document.createElement('div'); bubble.classList.add('bubble');
+  const bubble=document.createElement('div');
+  bubble.classList.add('bubble');
 
   if(chance<=0.001){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
   else if(chance<=0.016){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
@@ -232,7 +234,9 @@ function spawnBubble(){
   else if(chance<=0.0785){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
   else { bubble.textContent="12"; bubble.dataset.type="normal"; }
 
-  const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px';
+  const size=Math.random()*60+60;
+  bubble.style.width=size+'px';
+  bubble.style.height=size+'px';
   bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
@@ -241,12 +245,9 @@ function spawnBubble(){
 
   const pop=()=>{
     if(!gameRunning) return;
-    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0, popSound.play();
     bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
-
     if(bubble.dataset.type==="2x") score*=2;
     else if(bubble.dataset.type==="144") score+=144;
-    else if(bubble.dataset.type==="triple") score+=0; // už žádné další bubliny
     else if(bubble.dataset.type==="gravity"){
       const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
       const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
@@ -266,15 +267,13 @@ function spawnBubble(){
   setTimeout(spawnBubble,500);
 }
 
-// ---------------------- END GAME ----------------------
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
-  scoreContainer.style.display='none'; pauseBtn.style.display='none'; pauseScreen.style.display='none';
-  if(score===12 || score<=3){ easterEl.textContent=(score===12?'12':'BRUH'); easterEl.style.display='flex'; easterEl.style.animation='fadeShake 5s forwards'; setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },500);}
-  else showEndScreen();
+  document.getElementById('scoreContainer').style.display='none';
+  pauseBtn.style.display='none'; pauseScreen.style.display='none';
+  endScreen.style.display='flex';
+  document.getElementById('finalScoreText').textContent="Tvé skóre: "+score;
 }
-
-function showEndScreen(){ finalScoreText.textContent="Tvé skóre: "+score; endScreen.style.display='flex'; }
 </script>
 </body>
 </html>
